--- a/mandelbulber2/formula/ui/mandelbulb_lambda.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_lambda.ui
@@ -37,7 +37,7 @@
      <property name="checkable">
       <bool>false</bool>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_39" stretch="0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_39" stretch="0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -232,30 +232,6 @@
        </widget>
       </item>
       <item>
-       <layout class="QGridLayout" name="gridLayout_78" columnstretch="0,1">
-        <property name="topMargin">
-         <number>5</number>
-        </property>
-        <property name="verticalSpacing">
-         <number>2</number>
-        </property>
-        <item row="0" column="0" rowspan="2">
-         <widget class="QLabel" name="label_122">
-          <property name="text">
-           <string>TODO Default asin_atan2 mandelbulbs</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1" rowspan="2">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledx_false">
-          <property name="text">
-           <string>switch to acos_atan</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
        <layout class="QGridLayout" name="gridLayout_76" columnstretch="0,1">
         <property name="spacing">
          <number>2</number>
@@ -376,13 +352,6 @@
          <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
           <property name="text">
            <string notr="true">alt z.z B</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
-          <property name="text">
-           <string notr="true">trig TEMP</string>
           </property>
          </widget>
         </item>
@@ -704,12 +673,19 @@
        <number>2</number>
       </property>
       <item>
-       <layout class="QGridLayout" name="gridLayout_66">
-        <property name="spacing">
-         <number>2</number>
+       <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="0,1,0,1">
+        <property name="topMargin">
+         <number>0</number>
         </property>
-        <item row="0" column="3">
-         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_R">
+        <item>
+         <widget class="QLabel" name="label_256">
+          <property name="text">
+           <string>Start Rotation at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_R">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -721,22 +697,15 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_249">
-          <property name="text">
-           <string>Start Rotation at iteration:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_248">
+        <item>
+         <widget class="QLabel" name="label_257">
           <property name="text">
            <string>Stop Rotation at iteration:</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
-         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_R">
+        <item>
+         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_R">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -1361,8 +1330,6 @@
   <tabstop>spinbox3_transf_offset_001_y</tabstop>
   <tabstop>spinbox3_transf_offset_001_z</tabstop>
   <tabstop>groupCheck_transf_function_enabledR_false</tabstop>
-  <tabstop>spinboxInt_transf_start_iterations_R</tabstop>
-  <tabstop>spinboxInt_transf_stop_iterations_R</tabstop>
   <tabstop>spinboxd3_transf_rotation_y</tabstop>
   <tabstop>groupCheck_info</tabstop>
  </tabstops>
